--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^7.4.2",
     "react": "^16.13.1",
